--- a/core/templates/variance_analysis.html
+++ b/core/templates/variance_analysis.html
@@ -239,10 +239,10 @@
                             <tr class="bg-primary">
                                 <th class="text-left">Categoría de municipio</th>
                                 <th class="text-right">
-                                     P. Inicial
+                                    P. Inicial
                                 </th>
                                 <th class="text-right">
-                                     Ejecución
+                                    Ejecución
                                 </th>
                             </tr>
                             </thead>
@@ -270,7 +270,7 @@
                         </table>
                     </div>
                     <div class="col-lg-7 col-md-7 col-sm-12">
-                        <div id="bar_horizontal" class="view-alternative"> <h3>Informaci&oacute;n no disponible</h3>
+                        <div id="bar_horizontal" class="view-alternative"><h3>Informaci&oacute;n no disponible</h3>
                         </div>
                     </div>
                 {% elif not municipio and request.resolver_match.url_name == 'ejecucion_presupuesto' %}
@@ -281,10 +281,10 @@
                             <tr class="bg-primary">
                                 <th class="text-left">Categoría de municipio</th>
                                 <th class="text-right">
-                                     P. Inicial
+                                    P. Inicial
                                 </th>
                                 <th class="text-right">
-                                     Ejecución
+                                    Ejecución
                                 </th>
                             </tr>
                             </thead>
@@ -347,22 +347,22 @@
                             <thead class="thead-inverse">
                             <tr class="bg-primary">
                                 <th class="text-left">Municipios</th>
-				{% if periodo_list|keyvalue:year == 'I' %}
+                                {% if periodo_list|keyvalue:year == 'I' %}
                                     <th class="text-right">
                                         P. Inicial
                                     </th>
-				{% else %}
+                                {% else %}
                                     <th class="text-right">
                                         Ejecución
                                     </th>
-				{% endif %}
+                                {% endif %}
                             </tr>
                             </thead>
                             <tbody>
                             {% for row in otros %}
                                 <tr>
                                     <td class="text-left">{{ row.nombre }}</td>
-				    {% if periodo_list|keyvalue:year == 'I' %}
+                                    {% if periodo_list|keyvalue:year == 'I' %}
                                         <td class="text-right">
                                             {% if row.asignado %}
                                                 {{ row.asignado|floatformat:2 }}
@@ -385,7 +385,7 @@
                         </table>
                     </div>
                     <div class="col-lg-7 col-md-7 col-sm-12 ">
-                        <div id="bar_horizontal" class="view-alternative"> <h3>Informaci&oacute;n no disponible</h3>
+                        <div id="bar_horizontal" class="view-alternative"><h3>Informaci&oacute;n no disponible</h3>
                         </div>
                     </div>
                 </div>
@@ -434,15 +434,15 @@
             </div> <!-- .events-wrapper -->
 
             <ul class="cd-timeline-navigation">
-                <li><a href="#0" class="prev inactive">Prev</a></li>
-                <li><a href="#0" class="next">Next</a></li>
+                <li><a href="javascript:;" class="prev inactive">Prev</a></li>
+                <li><a href="javascript:;" class="next">Next</a></li>
             </ul> <!-- .cd-timeline-navigation -->
         </div> <!-- .timeline -->
 
         <div class="events-content">
             <ol>
                 {% for row in anuales %}
-                    <li><a href="" data-date="01/01/{{ expense.gasto__anio }} 00:00"
+                    <li><a href="javascript:;" data-date="01/01/{{ expense.gasto__anio }} 00:00"
                             {% if expense.gasto__anio == year|add:"0" %} class="selected" {% endif %}
                     ></a></li>
                 {% endfor %}
@@ -456,10 +456,10 @@
                 <h4 class="text-info">Millones de córdobas corrientes</h4>
                 <table class="table table-condensed">
                     <tr class="info">
-                        <th>Años</th>
-                        <th>Inicial</th>
-                        <th>Ejecutado</th>
-                        <th><a href="#" data-toggle="tooltip" data-original-title="Ejecutado/Inicial" class="link-info">%</a>
+                        <th class="text-center">Años</th>
+                        <th class="text-center">Inicial</th>
+                        <th class="text-center">Ejecutado</th>
+                        <th class="text-center"><a href="#" data-toggle="tooltip" data-original-title="Ejecutado/Inicial" class="link-info">%</a>
                         </th>
                     </tr>
                     {% for row in anuales %}
@@ -490,10 +490,10 @@
                 <h4 class="text-info">Millones de córdobas corrientes</h4>
                 <table class="table table-condensed">
                     <tr class="info">
-                        <th>Años</th>
-                        <th>Inicial</th>
-                        <th>Ejecutado</th>
-                        <th><a href="#" data-toggle="tooltip" data-original-title="Ejecutado/Inicial" class="link-info">%</a>
+                        <th class="text-center">Años</th>
+                        <th class="text-center">Inicial</th>
+                        <th class="text-center">Ejecutado</th>
+                        <th class="text-center"><a href="#" data-toggle="tooltip" data-original-title="Ejecutado/Inicial" class="link-info">%</a>
                         </th>
                     </tr>
                     {% for row in anualesg %}
