reparando excel de ranking de municipios OGM

--- a/core/templates/ogm_chart.html
+++ b/core/templates/ogm_chart.html
@@ -374,7 +374,7 @@
                                                 Presupuesto inicial de gastos
                                             {% endif %}
                                             {{ year }}
-                                            {% descargar_excel "oim8" %}
+                                            {% descargar_excel "ogm8" %}
                                         </h5>
                                     </td>
                                 </tr>
