reparando excel de ranking de municipios Inversiones municipales

--- a/core/templates/inversionpiechart.html
+++ b/core/templates/inversionpiechart.html
@@ -256,7 +256,7 @@
                             <h5> Córdobas corrientes por habitante</h5>
                             <hr class="pma-line-5">
                         {% else %}
-                            <h2><strong>Rankin de inversi&oacute;n perc&aacute;pita {{ year }}</strong><br/>
+                            <h2><strong>Ranking de inversi&oacute;n perc&aacute;pita {{ year }}</strong><br/>
                                 Municipio de {{ municipio }} grupo "{{ mi_clase.clasificacion }}"
                             </h2>
                             <h5>
