--- a/core/templates/variance_analysis.html
+++ b/core/templates/variance_analysis.html
@@ -84,13 +84,13 @@
                             <td>{% firstof row.tipoingreso__nombre row.tipoingreso__clasificacion %}</td>
                             {% if periodo_list|keyvalue:year == 'I' %}
                                 <td class="text-right">{{ row.inicial_asignado|million|intcomma }}</td>
-                                {% if row.inicial_asignado %}
-                                    <td class="text-right">{{ row.asignado|div:asignado|mul:100|floatformat:1 }}%</td>
+                                {% if row.asignado_porcentaje %}
+                                    <td class="text-right">{{ row.asignado_porcentaje }}%</td>
                                 {% endif %}
                             {% else %}
                                 <td class="text-right">{{ row.ejecutado|million|intcomma }}</td>
-                                {% if ejecutado %}
-                                    <td class="text-right">{{ row.ejecutado|div:ejecutado|mul:100|floatformat:1 }}%</td>
+                                {% if row.ejecutado_porcentaje %}
+                                    <td class="text-right">{{ row.ejecutado_porcentaje }}%</td>
                                 {% endif %}
                             {% endif %}
                         </tr>
