--- a/core/templates/variance_analysis.html
+++ b/core/templates/variance_analysis.html
@@ -162,17 +162,16 @@
                     <tbody>
                     {% for row in rubrosg %}
                         <tr>
-                            <td>
-                                {% firstof row.tipogasto__nombre row.tipogasto__clasificacion|default:'Otros' %}</td>
+                            <td>{% firstof row.tipogasto__nombre row.tipogasto__clasificacion|default:'Otros' %}</td>
                             {% if periodo_list|keyvalue:year == 'I' %}
                                 <td class="text-right">{{ row.inicial_asignado|million|intcomma }}</td>
                                 {% if asignado %}
-                                    <td class="text-right">{{ row.inicial_asignado|div:asignado|mul:100|floatformat:3 }}%</td>
+                                    <td class="text-right">{{ row.asignado_porcentaje }}%</td>
                                 {% endif %}
                             {% else %}
                                 <td class="text-right">{{ row.ejecutado|million|intcomma }}</td>
                                 {% if ejecutado %}
-                                    <td class="text-right">{{ row.ejecutado|div:ejecutado|mul:100|floatformat:3 }}%</td>
+                                    <td class="text-right">{{ row.ejecutado_porcentaje }}%</td>
                                 {% endif %}
                             {% endif %}
                         </tr>
