--- a/core/templates/expenses.html
+++ b/core/templates/expenses.html
@@ -48,7 +48,7 @@
                 <tbody>
                 {% for row in rubros %}
                     <tr>
-                       <td>{% firstof row.tipogasto__nombre row.subtipogasto__nombre %}</td>
+                        <td>{% firstof row.tipogasto__nombre row.subtipogasto__nombre %}</td>
                         {% if periodo_list|keyvalue:year == 'I' %}
                             <td class="text-right">{{ row.inicial_asignado|million|intcomma }}</td>
                             <td class="text-right">{{ row.inicial_asignado|div:asignado|mul:100|floatformat:1 }}%</td>
@@ -154,19 +154,15 @@
                             </tr>
                             </thead>
                             {% for row in otros %}
-                                {% if municipio.slug == row.gasto__municipio__slug %}
-                                    <tr class="info">
-                                        {% else %}
-                                    <tr>
-                                {% endif %}
-                            <td> {{ forloop.counter }} </td>
-                            <td>{{ row.gasto__municipio__nombre }}</td>
-                            {% if periodo_list|keyvalue:year == 'I' %}
-                                <td class="text-right">{{ row.asignado_percent }}%</td>
-                            {% else %}
-                                <td class="text-right">{{ row.ejecutado_percent }}%</td>
-                            {% endif %}
-                            </tr>
+                                <tr {% if municipio.slug == row.gasto__municipio__slug %}class="info"{% endif %}>
+                                    <td> {{ forloop.counter }} </td>
+                                    <td>{{ row.gasto__municipio__nombre }}</td>
+                                    {% if periodo_list|keyvalue:year == 'I' %}
+                                        <td class="text-right">{{ row.asignado_percent }}%</td>
+                                    {% else %}
+                                        <td class="text-right">{{ row.ejecutado_percent }}%</td>
+                                    {% endif %}
+                                </tr>
                             {% endfor %}
                             <tr class="success">
                                 <td></td>
