agregando indicador para mostrarr el presupuesto del ultimo año

--- a/core/templates/expenses.html
+++ b/core/templates/expenses.html
@@ -341,17 +341,24 @@
                 <div class="events" style="width:{{ anuales|length|add:1|mul:135 }}px">
                     <ol>
                         {% for row in anuales %}
-                            <li><a href="" data-date="01/01/{{ row.gasto__anio }} 00:00"
-                                    {% if row.gasto__anio == year|add:"0" %} class="selected" {% endif %}
-                                   style="left:{{ forloop.counter|mul:"135" }}px;"><span
-                                    class="posicion">{{ row.gasto__anio }}</span>
-                                <br/>
-                                {% if row.gasto__periodo == 'I' %}
-                                    <span class="line-cifra">{{ row.asignado|million|intcomma }}</span>
-                                {% else %}
-                                    <span class="line-cifra">{{ row.ejecutado|million|intcomma }}</span>
-                                {% endif %}
-                            </a></li>
+                            <li>
+                                <a href="#" data-date="01/01/{{ row.gasto__anio }} 00:00"
+                                        {% if row.gasto__anio == year|add:"0" %} class="selected" {% endif %}
+                                   style="left:{{ forloop.counter|mul:"135" }}px;">
+                                    <span class="posicion"
+                                          {% if row.gasto__periodo != 'F' %}data-toggle="tooltip"
+                                          data-placement="top"
+                                          title="P.{% if row.gasto__periodo == 'I' %}Inicial{% else %}Intermedio{% endif %}"{% endif %}>
+                                            {{ row.gasto__anio }}
+                                        {% if row.gasto__periodo == 'I' %}*{% endif %}
+                                    </span>
+                                    <br/>
+                                    {% if row.gasto__periodo == 'I' %}
+                                        <span class="line-cifra">{{ row.asignado|million|intcomma }}</span>
+                                    {% else %}
+                                        <span class="line-cifra">{{ row.ejecutado|million|intcomma }}</span>
+                                    {% endif %}
+                                </a></li>
                         {% endfor %}
                     </ol>
                     <span class="filling-line" aria-hidden="true" style="transform: scaleX(0.0772222);"></span>
@@ -396,7 +403,14 @@
                     </tr>
                     {% for row in anuales %}
                         <tr>
-                            <td>{{ row.gasto__anio }}</td>
+                            <td>
+                                {{ row.gasto__anio }}
+                                {% if periodo_list|keyvalue:row.gasto__anio != 'F' %}
+                                    <span data-toggle="tooltip"
+                                          data-placement="top"
+                                          title="P.{% if periodo_list|keyvalue:row.gasto__anio == 'I' %}Inicial{% else %}
+                                            Intermedio{% endif %}">*</span>
+                                {% endif %}</td>
                             <td class="text-right">{{ row.asignado|million|intcomma }}</td>
                             <td class="text-right">{{ row.ejecutado|million|intcomma }}</td>
                             {% if row.asignado %}
@@ -546,7 +560,6 @@
                     </table>
                 </div>
             </div>
-        </div>
         </div>
     {% endif %}
 {% endblock %}
